--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+argon2-cffi==20.1.0
 asgiref==3.2.7
 astroid==2.4.0
+bcrypt==3.1.7
 certifi==2020.4.5.1
-Django==3.0.3
+cffi==1.14.0
+chardet==3.0.4
+Django==3.0.7
 Faker==4.1.0
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+pycparser==2.20
 pylint==2.5.0
 python-dateutil==2.8.1
 pytz==2020.1
+requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
 text-unidecode==1.3
 toml==0.10.0
+urllib3==1.25.9
 wrapt==1.11.2
